Add delete on list / Multiple handle click viewholder by view clicked

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <!-- Global -->
     <string name="exercice_title">Exercice</string>
     <string name="workout_title">Programme</string>
-
+    <string name="test">Test</string>
     <!-- Settings -->
 
     <!-- Settings home-->
